--- a/index.html
+++ b/index.html
@@ -1,107 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WebStudio</title>
-    </head>
-    <body>
-        <header>        
-            <nav>
-                <a href="" class="header-logo">WebStudio</a>            
-                <ul>                    
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>                    
-                </ul>
-            </nav>
-            <ul>
-               <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-               <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
-            </ul>                             
-        </header>
-        <main>
-            <section class="home">
-                <div class="container">
-                    <div class="home-content">
-                        <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>                
-                        <button type="submit">Заказать услугу</button>                 
-                    </div>
-                </div>
-            </section>
-            <section class="how-it-works">
-                <h2>О нас</h2>
-                <ul>
-                    <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li>
-                    <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li>
-                    <li>
-                        <h3>Планирование </h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li>
-                    <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-            </section>    
-            <section class="classes">
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                <li>
-                    <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img"> 
-                </li>                         
-                <li>
-                    <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img"> 
-                </li>             
-                <li>
-                    <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img"> 
-                </li> 
-                </ul>
-            </section>
-            <section class="team">   
-                    <h2>Наша команда</h2>
-                    <ul>
-                        <li>
-                            <img src="./img/ourteam/img.jpg" width="270" alt="Наша команда">
-                            <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <img src="./img/ourteam/img1.jpg" width="270" alt="Наша команда">
-                            <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <img src="./img/ourteam/img2.jpg" width="270" alt="Наша команда">
-                            <h3>Николай Тарасов</h3>
-                            <p>Marketing </p>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <img src="./img/ourteam/img3.jpg" width="270" alt="Наша команда">
-                            <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p>
-                        </li>
-                    </ul>
-            </section>             
-        </main>
-        <footer class="footer">
-            <a href="" class="header-logo">WebStudio</a>        
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tell:+380991111111">+38 099 111 11 11</a>                
-        </footer>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="" class="header-logo">WebStudio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="home">
+        <div class="container">
+          <div class="home-content">
+            <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
+            <button type="submit">Заказать услугу</button>
+          </div>
+        </div>
+      </section>
+      <section class="how-it-works">
+        <h2>О нас</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="classes">
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img" />
+          </li>
+          <li>
+            <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img" />
+          </li>
+          <li>
+            <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img" />
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./img/ourteam/img.jpg" width="270" alt="Наша команда" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./img/ourteam/img1.jpg" width="270" alt="Наша команда" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./img/ourteam/img2.jpg" width="270" alt="Наша команда" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./img/ourteam/img3.jpg" width="270" alt="Наша команда" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <a href="" class="header-logo">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="mailto:info@example.com">info@example.com</a>
+      <a href="tel:+380991111111">+38 099 111 11 11</a>
+    </footer>
+  </body>
 </html>
