--- a/portfolio.html
+++ b/portfolio.html
@@ -69,63 +69,63 @@
                         <li class="project-item">
                             <img src="./images/img.jpg" alt="project" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Технокряк</h3>
+                                <h3 class="project-name">Технокряк</h3>
                                 <p class="project-category">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img1.jpg" alt="project1" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Постер New Orlean vs Golden Star</h3>
+                                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                                 <p class="project-category">Дизайн</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img2.jpg" alt="project2" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Ресторан Seafood</h3>
+                                <h3 class="project-name">Ресторан Seafood</h3>
                                 <p class="project-category">Приложение</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img3.jpg" alt="project3" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Проект Prime</h3>
+                                <h3 class="project-name">Проект Prime</h3>
                                 <p class="project-category">Маркетинг</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img4.jpg" alt="project4" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Проект Boxes</h3>
+                                <h3 class="project-name">Проект Boxes</h3>
                                 <p class="project-category">Приложение</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img5.jpg" alt="project5" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Inspiration has no Borders</h3>
+                                <h3 class="project-name">Inspiration has no Borders</h3>
                                 <p class="project-category">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img6.jpg" alt="project6" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Издание Limited Edition</h3>
+                                <h3 class="project-name">Издание Limited Edition</h3>
                                 <p class="project-category">Дизайн</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img7.jpg" alt="project7" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Проект LAB</h3>
+                                <h3 class="project-name">Проект LAB</h3>
                                 <p class="project-category">Маркетинг</p>
                             </div>
                         </li>
                         <li class="project-item">
                             <img src="./images/img8.jpg" alt="project8" width="370" height="294" />
                             <div>
-                                <h3 class="name-project-item">Growing Business</h3>
+                                <h3 class="project-name">Growing Business</h3>
                                 <p class="project-category">Приложение</p>
                             </div>
                         </li>
