--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
       </nav>
       <div class="container">
         <ul class="top-contacts-list">
-          <li class="top-contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="top-contacts-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="top-contacts-item">
+            <a href="mailto:info@devstudio.com" class="top-contacts-item-link">info@devstudio.com</a>
+          </li>
+          <li class="top-contacts-item">
+            <a href="tel:+380961111111" class="top-contacts-item-link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -68,8 +72,7 @@
           </ul>
         </div>
       </section>
-      <section class="we-doing">
-        <div class="we-doing-container">
+      <section class="we-doing">        
           <h2 class="we-doing-subtitle">Чем мы занимаемся</h2>
           <ul class="we-doing-list">
             <li class="we-doing-item">
@@ -81,11 +84,9 @@
             <li class="we-doing-item">
               <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img" />
             </li>
-          </ul>
-        </div>
+          </ul>        
       </section>
       <section class="team">
-        <div class="team-container">
           <h2 class="team-subtitle">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -108,8 +109,7 @@
               <h3>Михаил Ермаков</h3>
               <p>UI Designer</p>
             </li>
-          </ul>
-        </div>
+          </ul>        
       </section>
     </main>
     <footer class="footer">
@@ -118,7 +118,7 @@
        <address class="address">
           <ul class="address-footer-list">
             <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>                
-            <li><a href="mailto:info@devstudio.com" class="address-link-mail"> info@example.com</a></li>
+            <li><a href="mailto:info@example.com" class="address-link-mail"> info@example.com</a></li>
             <li><a href="tel:+380961111111" class="address-link-phone">+38 099 111 11 11</a></li>
           </ul>
        </address>
