--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,7 @@
             </div>
         </header>
         <main>
-            <section class="portfolio">
-                <div class="filters-container">
+            <section class="portfolio">                
                     <ul class="filters-list">
                         <li class="filters-item">
                             <button class="filters-button" type="button">Все</button>
@@ -61,9 +60,7 @@
                         <li class="filters-item">
                             <button class="filters-button" type="button">Маркетинг</button>
                         </li>
-                    </ul>
-                </div>
-
+                    </ul>        
                 <div class="container">
                     <ul class="project-list">
                         <li class="project-item">
@@ -140,7 +137,7 @@
             <address class="address">
                 <ul class="address-footer-list">
                     <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="address-link-mail">info@example.com</a></li>
+                    <li><a href="mailto:info@example.com" class="address-link-mail">info@example.com</a></li>
                     <li><a href="tel:+380961111111" class="address-link-phone">+38 099 111 11 11</a></li>
                 </ul>
             </address>
