--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           <h2 class="we-doing-subtitle">Чем мы занимаемся</h2>
           <ul class="we-doing-list">
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/images/box1.jpg" alt="tasks-img" />
+              <img src="./images/box1.jpg" alt="tasks-img" />
             </li>
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/images/box2.jpg" alt="tasks-img" />
+              <img src="./images/box2.jpg" alt="tasks-img" />
             </li>
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/images/box3.jpg" alt="tasks-img" />
+              <img src="./images/box3.jpg" alt="tasks-img" />
             </li>
           </ul>        
       </section>
