--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </section>
       <section class="we-doing">        
-          <h2 class="we-doing-subtitle">Чем мы занимаемся</h2>
+          <h2 class="we-doing-subtitle title">Чем мы занимаемся</h2>
           <ul class="we-doing-list">
             <li class="we-doing-item">
               <img src="./images/box1.jpg" alt="tasks-img" />
@@ -87,7 +87,7 @@
           </ul>        
       </section>
       <section class="team">
-          <h2 class="team-subtitle">Наша команда</h2>
+          <h2 class="team-subtitle title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
               <img src="./images/ourteam.jpg" width="270" alt="Наша команда" />
