--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="index.html" class="logo" lang="en" title="WebStudio"><span class="accent">Web</span>Studio</a>
       <nav>
         <div class="container">
-          <ul class="menu-list">
+          <ul class="menu-list list">
             <li class="menu-item"><a href="#" class="menu-list-item-link current">Студия</a></li>
             <li class="menu-item"><a href="./portfolio.html" class="menu-list-item-link">Портфолио</a></li>
             <li class="menu-item"><a href="#" class="menu-list-item-link">Контакты</a></li>
@@ -21,7 +21,7 @@
         </div>
       </nav>
       <div class="container">
-        <ul class="top-contacts-list">
+        <ul class="top-contacts-list list">
           <li class="top-contacts-item">
             <a href="mailto:info@devstudio.com" class="top-contacts-item-link">info@devstudio.com</a>
           </li>
@@ -40,7 +40,7 @@
       </section>
       <section class="features">
         <div class="features-container">
-          <ul class="features-list">
+          <ul class="features-list list">
             <li class="features-item">
               <h3 class="features-subtitle">Внимание к деталям</h3>
               <p class="features-text">
@@ -74,7 +74,7 @@
       </section>
       <section class="we-doing">        
           <h2 class="we-doing-subtitle title">Чем мы занимаемся</h2>
-          <ul class="we-doing-list">
+          <ul class="we-doing-list list">
             <li class="we-doing-item">
               <img src="./images/box1.jpg" alt="tasks-img" />
             </li>
@@ -88,7 +88,7 @@
       </section>
       <section class="team">
           <h2 class="team-subtitle title">Наша команда</h2>
-          <ul class="team-list">
+          <ul class="team-list list">
             <li class="team-item">
               <img src="./images/ourteam.jpg" width="270" alt="Наша команда" />
               <h3>Игорь Демьяненко</h3>
@@ -116,7 +116,7 @@
       <a href="index.html" class="logo" lang="en">
           <span class="accent">Web</span>Studio</a>
        <address class="address">
-          <ul class="address-footer-list">
+          <ul class="address-footer-list list">
             <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>                
             <li><a href="mailto:info@example.com" class="address-link-mail"> info@example.com</a></li>
             <li><a href="tel:+380961111111" class="address-link-phone">+38 099 111 11 11</a></li>
