--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <a href="index.html" class="logo" lang="en" title="WebStudio"><span class="accent">Web</span>Studio</a>
             <nav>
                 <div class="container">
-                    <ul class="menu-list">
+                    <ul class="menu-list list">
                         <li class="menu-item">
                             <a href="index.html" class="menu-list-item-link">Студия</a>
                         </li>
@@ -30,7 +30,7 @@
                 </div>
             </nav>
             <div class="container">
-                <ul class="top-contacts-list">
+                <ul class="top-contacts-list list">
                     <li class="top-contacts-item">
                         <a href="mailto:info@devstudio.com" class="top-contacts-item-link">info@devstudio.com</a>
                     </li>
@@ -42,7 +42,7 @@
         </header>
         <main>
             <section class="portfolio">                
-                    <ul class="filters-list">
+                    <ul class="filters-list list">
                         <li class="filters-item">
                             <button class="filters-button" type="button">Все</button>
                         </li>
@@ -60,7 +60,7 @@
                         </li>
                     </ul>        
                 <div class="container">
-                    <ul class="project-list">
+                    <ul class="project-list list">
                         <li class="project-item">
                             <img src="./images/img.jpg" alt="project" width="370" height="294" />
                             <div>
@@ -132,7 +132,7 @@
             <a href="index.html" class="logo" lang="en">
                 <span class="accent">Web</span>Studio</a>
             <address class="address">
-                <ul class="address-footer-list">
+                <ul class="address-footer-list list">
                     <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a href="mailto:info@example.com" class="address-link-mail">info@example.com</a></li>
                     <li><a href="tel:+380961111111" class="address-link-phone">+38 099 111 11 11</a></li>
